--- a/debug/Dockerfile
+++ b/debug/Dockerfile
@@ -5,7 +5,11 @@ RUN apk add --no-cache tcpdump && \
 
 ADD debug/entrypoint.sh /files/
 
-#COPY ./testing.pub /root/.ssh/authorized_keys
+# Configure the importing of all environment variables from pid 1 to make use of the ECS specific environment variables(Task Roles) for the awscli
+  echo 'export $(strings /proc/1/environ)' > /root/.profile && \
+# Changing the motd to remember the above configuration
+  printf '\n\nNOTICE: export $(strings /proc/1/environ) is run on the ash shell profile which makes the aws cli work with Task Roles.\nc' > /etc/motd
+
 RUN ls -lrt /files/entrypoint.sh
 RUN chmod +x /files/entrypoint.sh
 RUN ls -lrt /files/entrypoint.sh
