Fixed RUN command

--- a/debug/Dockerfile
+++ b/debug/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache tcpdump && \
 ADD debug/entrypoint.sh /files/
 
 # Configure the importing of all environment variables from pid 1 to make use of the ECS specific environment variables(Task Roles) for the awscli
-  echo 'export $(strings /proc/1/environ)' > /root/.profile && \
+RUN echo 'export $(strings /proc/1/environ)' > /root/.profile && \
 # Changing the motd to remember the above configuration
   printf '\n\nNOTICE: export $(strings /proc/1/environ) is run on the ash shell profile which makes the aws cli work with Task Roles.\nc' > /etc/motd
 
